# xcprobe

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: clustering.rs  confidence.rs  dependencies.rs  docker.rs  lib.rs  main.rs  scoring.rs
crates/bundle-schema/: Cargo.toml
crates/bundle-schema/src/: audit.rs  evidence.rs  lib.rs  manifest.rs  packplan.rs  schema.rs  validation.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  hash.rs  lib.rs  os.rs  timestamp.rs
crates/e2e-runner/: Cargo.toml
crates/e2e-runner/src/: main.rs  metrics.rs  report.rs  runner.rs  truth.rs
crates/probe-cli/: Cargo.toml
crates/probe-cli/src/: bundle.rs  collector.rs  commands.rs  executor.rs  lib.rs  main.rs  pack.rs  parsers.rs
crates/redaction/: Cargo.toml
crates/redaction/src/: entropy.rs  lib.rs  patterns.rs  redactor.rs
crates/xcprobe/: Cargo.toml
crates/xcprobe/src/: main.rs
docs/: analysis.md  collection.md  docker-generation.md  e2e-ci.md  overview.md  security.md  workflow.md
tests/scenarios/scenario_a_basic_multi_proc_host/: compose.yaml  truth.json
tests/scenarios/scenario_a_basic_multi_proc_host/host-sim/: Dockerfile  supervisord.conf
tests/scenarios/scenario_a_basic_multi_proc_host/host-sim/apps/api/: app.py
tests/scenarios/scenario_a_basic_multi_proc_host/host-sim/apps/metrics/: exporter.py
tests/scenarios/scenario_a_basic_multi_proc_host/host-sim/apps/worker/: worker.py
tests/scenarios/scenario_a_basic_multi_proc_host/host-sim/env/: api.env  worker.env
tests/scenarios/scenario_b_wrapper_and_env_files/: compose.yaml  truth.json
tests/scenarios/scenario_b_wrapper_and_env_files/host-sim/: Dockerfile  app.conf  app.py  env  wrapper.sh
tests/scenarios/scenario_c_batch_only_no_ports/: compose.yaml  truth.json
tests/scenarios/scenario_c_batch_only_no_ports/host-sim/: Dockerfile  batch.py  config.yaml
tests/scenarios/scenario_d_logs_stdout_only/: compose.yaml  truth.json
tests/scenarios/scenario_d_logs_stdout_only/host-sim/: Dockerfile  package.json  server.js
