[workspace]
resolver = "2"
members = [
    "crates/xcprobe",
    "crates/probe-cli",
    "crates/analyzer",
    "crates/bundle-schema",
    "crates/redaction",
    "crates/e2e-runner",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XCProbe Team"]
license = "MIT"
repository = "https://github.com/fredericcarre/xcprobe"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# SSH
ssh2 = "0.9"
openssl = { version = "0.10", features = ["vendored"] }

# HTTP client (for WinRM)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Regex
regex = "1.10"

# Archive
flate2 = "1.0"
tar = "0.4"

# JSON Schema
jsonschema = "0.17"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Templating
handlebars = "5.1"

# Testing
assert_fs = "1.1"
predicates = "3.0"

# Graph
petgraph = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true
