[package]
name = "xcprobe-analyzer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "analyzer"
path = "src/main.rs"

[dependencies]
xcprobe-common = { path = "../common" }
xcprobe-bundle-schema = { path = "../bundle-schema" }
xcprobe-redaction = { path = "../redaction" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
handlebars = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
